--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -357,3 +357,26 @@ header h1{
   text-transform: uppercase;
   line-height: 1.3;
 }
+
+/* calculator style here  */
+.calculator-container{
+  padding: 60px 0;}
+.calculator-container .container{
+  max-width: 900px;
+}
+.calculator{
+  padding: 150px 0;
+
+}
+.calculator .container{
+  max-width: 900px;
+}
+.heading h2{
+  font-size: 60px;
+  text-transform: capitalize;
+  padding-bottom: 15px;
+  border-bottom: 1px solid #bebebe;
+}
+textarea.form-control {
+  height: 130px !important;
+}
